--- a/playbooks/goat.yml
+++ b/playbooks/goat.yml
@@ -1,10 +1,9 @@
-- name: Goat node
-  hosts: rpc_servers,bootnode_servers
+- name: Validator setup and run
+  hosts: rpc_servers
   become: true
   gather_facts: false
   vars:
     cleanup: false  # default not cleanup
-
   tasks:
     - name: Clean up Goat environment
       when: cleanup | bool
@@ -53,8 +52,14 @@
         - "files/goat/"
       when: item.state == 'file'
 
+    - name: Init goat
+      ansible.builtin.shell: |
+        docker compose -f docker-compose-init.yml up
+      args:
+        chdir: /data/runtime/
+
     - name: Start goat
       ansible.builtin.shell: |
-        docker compose pull && docker compose down && docker compose -f docker-compose-init.yml up && docker compose up -d
+        docker compose up -d
       args:
         chdir: /data/runtime/
