--- a/playbooks/goat.yml
+++ b/playbooks/goat.yml
@@ -4,6 +4,10 @@
   gather_facts: false
   vars:
     cleanup: false  # default not cleanup
+    validator_files:
+      - "files/validator/priv_validator_key_1.json"
+      - "files/validator/priv_validator_key_2.json"
+      - "files/validator/priv_validator_key_3.json"
   tasks:
     - name: Clean up Goat environment
       when: cleanup | bool
@@ -57,6 +61,16 @@
         docker compose -f docker-compose-init.yml up
       args:
         chdir: /data/runtime/
+
+    - name: Copy validator files
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "/data/goat/config/priv_validator_key.json"
+        mode: '0644'
+      loop: "{{ validator_files }}"
+      loop_control:
+        index_var: idx
+      when: idx == ansible_play_hosts.index(inventory_hostname)
 
     - name: Start goat
       ansible.builtin.shell: |
