--- a/playbooks/goat.yml
+++ b/playbooks/goat.yml
@@ -4,10 +4,10 @@
   gather_facts: false
   vars:
     cleanup: false  # default not cleanup
-    validator_files:
-      - "files/validator/priv_validator_key_1.json"
-      - "files/validator/priv_validator_key_2.json"
-      - "files/validator/priv_validator_key_3.json"
+    validator_files: # length should equal to the number of validators
+      - "files/goat/validator/priv_validator_key_1.json"
+      - "files/goat/validator/priv_validator_key_2.json"
+      - "files/goat/validator/priv_validator_key_3.json"
   tasks:
     - name: Clean up Goat environment
       when: cleanup | bool
