--- a/hosts.ini.example
+++ b/hosts.ini.example
@@ -6,19 +6,21 @@
 10.0.0.30
 
 # relayer nodes
-[relayer_servers]
+[relayer_bootnode_servers]
 10.0.0.20
+
+[relayer_voter_servers]
 10.0.0.21
 10.0.0.22
 
 # goat nodes
-[validator_servers]
+[goat_bootnode_servers]
+10.0.0.10
+
+[goat_validator_servers]
 10.0.0.11
 10.0.0.12
 10.0.0.13
-
-[bootnode_servers]
-10.0.0.10
 
 [all:vars]
 ansible_ssh_user=ubuntu
