--- a/playbooks/goat_bootnode.yml
+++ b/playbooks/goat_bootnode.yml
@@ -1,9 +1,9 @@
 - name: Bootnode setup and run
-  hosts: bootnode_servers
+  hosts: goat_bootnode_servers
   become: true
   gather_facts: false
   vars:
-    cleanup: false  # default not cleanup
+    cleanup: false # default not cleanup
     geth_nodekey_file: secrets/goat/bootnode/geth_nodekey.key
     goat_nodekey_file: secrets/goat/bootnode/goat_nodekey.json
   tasks:
