--- a/playbooks/files/relayer/docker-compose.yml
+++ b/playbooks/files/relayer/docker-compose.yml
@@ -3,10 +3,14 @@ name: testnet
 services:
   goat-relayer:
     image: goatnetwork/goat-relayer:latest
+    pull_policy: always
     env_file:
       - .env
     environment:
-      - LIBP2P_BOOT_NODES=/ip4/172.31.32.12/tcp/4001/p2p/12D3KooWEyrTn9ZD2Kidma4EKZ7ajaa7XDdje822WNZBRxpwQBYx
+      - L2_RPC=http://ip-10-1-103-28.us-west-2.compute.internal:8545
+      - GOATCHAIN_RPC_URI=tcp://ip-10-1-103-28.us-west-2.compute.internal:26657
+      - GOATCHAIN_GRPC_URI=ip-10-1-103-28.us-west-2.compute.internal:9090
+      - LIBP2P_BOOT_NODES=/ip4/10.1.103.223/tcp/4001/p2p/12D3KooWEyrTn9ZD2Kidma4EKZ7ajaa7XDdje822WNZBRxpwQBYx
     ports:
       - "8080:8080"
       - "50051:50051"
