--- a/hosts.ini.example
+++ b/hosts.ini.example
@@ -22,6 +22,10 @@
 10.0.0.12
 10.0.0.13
 
+# btc nodes
+[btc_servers]
+10.0.0.1
+
 [all:vars]
 ansible_ssh_user=ubuntu
 ansible_ssh_private_key_file=/path/to/your/key.pem
