--- a/playbooks/files/goat/docker-compose-bootnode.yml
+++ b/playbooks/files/goat/docker-compose-bootnode.yml
@@ -41,6 +41,8 @@ services:
       - /geth/geth.ipc
       - --api.enable
       - --api.address=tcp://0.0.0.0:1317
+      - --rpc.laddr=tcp://0.0.0.0:26657
+      - --grpc.address=0.0.0.0:9090
       - --log_level=debug
     volumes:
       - /data/goat:/goat
