chore: relayer compose up force recreate

--- a/playbooks/relayer_voter.yml
+++ b/playbooks/relayer_voter.yml
@@ -63,6 +63,6 @@
 
     - name: Start relayer
       ansible.builtin.shell: |
-        docker compose up -d
+        docker compose up -d --force-recreate
       args:
         chdir: /data/runtime/
