--- a/playbooks/relayer_bootnode.yml
+++ b/playbooks/relayer_bootnode.yml
@@ -74,6 +74,6 @@
 
     - name: Start relayer
       ansible.builtin.shell: |
-        docker compose -f docker-compose-bootnode.yml up -d
+        docker compose -f docker-compose-bootnode.yml up -d --force-recreate
       args:
         chdir: /data/runtime/
