chore: force recreate goat geth components

--- a/playbooks/goat_bootnode.yml
+++ b/playbooks/goat_bootnode.yml
@@ -76,6 +76,6 @@
 
     - name: Start Goat CL & EL
       ansible.builtin.shell: |
-        docker compose -f docker-compose-bootnode.yml up -d
+        docker compose -f docker-compose-bootnode.yml up -d --force-recreate
       args:
         chdir: /data/runtime/
