--- a/playbooks/goat_validator.yml
+++ b/playbooks/goat_validator.yml
@@ -76,6 +76,6 @@
 
     - name: Start Goat CL & EL
       ansible.builtin.shell: |
-        docker compose up -d
+        docker compose up -d --force-recreate
       args:
         chdir: /data/runtime/
