--- a/playbooks/files/front/graph/docker-compose.yml
+++ b/playbooks/files/front/graph/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     container_name: goat-testnet-graph-ipfs
     ports:
       - '5001:5001'
+    volumes:
+      - /data/graph/ipfs:/data/ipfs
   postgres:
     image: postgres
     container_name: goat-testnet-graph-postgres
@@ -43,3 +45,5 @@ services:
       POSTGRES_DB: graph-node
       PGDATA: "/var/lib/postgresql/data"
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
+    volumes:
+      - /data/graph/postgres:/var/lib/postgresql/data
