--- a/playbooks/appetizer_init_volume.yml
+++ b/playbooks/appetizer_init_volume.yml
@@ -3,16 +3,17 @@
   become: yes
   vars:
     mount_point: /data
+    data_disk_size: 107374182400 # 100GB
   tasks:
     - name: Get disk information
       command: lsblk -bno NAME,SIZE,TYPE
       register: disk_info
       changed_when: false
 
-    - name: Identify 500GB data disk
+    - name: Identify data disk
       set_fact:
         data_disk: "{{ item.split()[0] }}"
-      when: item.split()[1] == '536870912000' and item.split()[2] == 'disk'
+      when: item.split()[1] == '{{ data_disk_size }}' and item.split()[2] == 'disk'
       loop: "{{ disk_info.stdout_lines }}"
 
     - name: Display identified data disk
